add main-nav, style body bgc, include vendor/bootstrap grid

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pathfinder</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;600;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="vendor/bootstrap-grid.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+  <div class="header container">
+    <div class="main-nav row">
+      <a href="#about" class="col-1">About</a>
+      <a href="#pathfinder" class="col-1">Pathfinder</a>
+    </div>
+    <div class="title_wrapper row">
+      <h1 class="title col-12">Pathfinder</h1>
+      <h3 class="subtitle col-12">For travelers</h3>
+    </div>
+    <div id="pages">
+      <div id="about">About site contetnt</div>
+      <div id="pathfinder">Pathfinder app</div>
+    </div>
+  </div>
 </body>
 </html>
