add styles for about page

--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,38 @@
       <a href="#about" class="col-1">About</a>
       <a href="#pathfinder" class="col-1">Pathfinder</a>
     </div>
-    <div class="title_wrapper row">
-      <h1 class="title col-12">Pathfinder</h1>
-      <h3 class="subtitle col-12">For travelers</h3>
+    <div class="splash">
+      <div class="title-wrapper">
+        <h1 class="title">Pathfinder</h1>
+        <h2 class="subtitle">For travelers</h2>
+      </div>
     </div>
-    <div id="pages">
-      <div id="about">About site contetnt</div>
-      <div id="pathfinder">Pathfinder app</div>
+  </div>
+  <div id="pages">
+    <div id="about" class="container active">
+      <div class="section row">
+          <div class="img-wrapper img_small col-6">
+            <img src="images/1.jpg" alt="image1">
+          </div>
+          <div class="section__description section_small">
+            <h3 class="section__title">Plan your journeys</h3>
+            <h4 class="section__subtitile">Pick attractions and book hotels</h4>
+          </div>
+      </div>
+      <div class="section row flex-row-reverse img_big">
+        <div class="img-wrapper  col-9">
+          <img src="images/2.jpg" alt="image2">
+        </div>
+        <div class="section__description section_big">
+          <h3 class="section__title">Minimalize boredom</h3>
+          <h4 class="section__subtitile">Pick routes that are short and attractive</h4>
+        </div>
+      </div>
+    </div>
+    <div id="pathfinder" class="container active">
+      <div class="section row">
+        <div class="col-8"></div>
+      </div>
     </div>
   </div>
 </body>
