add app.js settings.js Pathfinder.js at this point app is toggle pages without reloading. Class Pathfinder is in progress

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
 <body>
   <div class="header container">
     <div class="main-nav row">
-      <a href="#about" class="col-1">About</a>
-      <a href="#pathfinder" class="col-1">Pathfinder</a>
+      <a href="#about" class="col-2">About</a>
+      <a href="#pathfinder" class="col-2">Pathfinder</a>
     </div>
     <div class="splash">
       <div class="title-wrapper">
@@ -24,7 +24,7 @@
     </div>
   </div>
   <div id="pages">
-    <div id="about" class="container active">
+    <div id="about" class="container">
       <div class="section row">
           <div class="img-wrapper img_small col-6">
             <img src="images/1.jpg" alt="image1">
@@ -44,11 +44,10 @@
         </div>
       </div>
     </div>
-    <div id="pathfinder" class="container active">
-      <div class="section row">
-        <div class="col-8"></div>
-      </div>
+    <div id="pathfinder" class="container">
     </div>
   </div>
+
+  <script src="js/app.js" type="module"></script>
 </body>
 </html>
