Pathfinder in progress

--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,8 @@
       </div>
     </div>
     <div id="pathfinder" class="container">
+      <div class="pathifinder_board"></div>
+      <button class="pathfinder_button " type="button">Select start</button>
     </div>
   </div>
 
